--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Aug 19 20:42:50 ICT 2019
-sdk.dir=/Users/minhhuy/Library/Android/sdk
+sdk.dir=C\:\\Users\\yello\\AppData\\Local\\Android\\Sdk
