--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Aug 19 20:42:50 ICT 2019
-sdk.dir=C\:\\Users\\yello\\AppData\\Local\\Android\\Sdk
+#Mon Aug 19 22:27:07 ICT 2019
+sdk.dir=/Users/minhhuy/Library/Android/sdk
